Fix padding and margins of AA carousel container to align with logo and hamburger menu

--- a/app/assets/stylesheets/refinery/home.scss
+++ b/app/assets/stylesheets/refinery/home.scss
@@ -308,6 +308,7 @@
 
       &-container {
         margin: auto;
+        padding: 0 1.35rem;
         width: 90rem;
 
         @media (max-width: 425px){
